# hierarchia-mundi

./: .gitignore  .strange_loop_config  DISCOVERY.md  README.md  hierarchia.json  logic_gates.sys  pyproject.toml  seed.yaml  value-repos.json
.github/workflows/: ci.yml  release.yml
boot/: big_bang.sh
dev/: null  random
doc/activation-audits/: EV-2026-06-11-200211.md  EV-2026-06-19-111753.md  EV-2026-06-19-ship-now.md
hierarchia/: __init__.py  __main__.py  executor.py  loader.py  registry.py  validator.py
hierarchia/models/: __init__.py  cross_ref.py  stratum.py
lib/: automata.lib  periodic_table.db
lib/biochemistry/: proteins.lib  rna_transcription.sh
net/: noosphere.sock
net/technium/: autonomous_ai_evolution.sys  generative_systems.run  global_markets_algo.run
sys/: gravity.conf  standard_model.lib
sys/quantum_mechanics/: planck_scale.api
sys/thermodynamics/: entropy.daemon
tests/: test_cli.py  test_loader.py  test_smoke.py
usr/academia/: README  knowledge_taxonomy.db
usr/culture/: myth_fusion_engine.lib
usr/culture/arts_and_media/: README  interactive_mythologies.db  lynchian_ontology.db  power_systems.db
usr/culture/belief_systems/: classical_mythology.db  esoteric_principles.db  secular_ethics.md
usr/culture/languages/: README  language_as_code.sys
usr/economy/: macro_markets.api
usr/governance/: local_zoning_laws.txt  social_contract.sys
usr/infrastructure/: architecture_types.db
usr/infrastructure/power_grids/: README
usr/infrastructure/tcp_ip_stack/: README
