[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hierarchia"
version = "0.1.0"
description = "The structure of reality, modeled as typed executable modules"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["hierarchia"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
